--- a/README.rdoc
+++ b/README.rdoc
@@ -1,23 +1,29 @@
 = jazrb
 
 Jazrb provides support for running JavaScript specs written using the
-Jasmine Javascript BDD framework under <tt>env.js</tt>. It includes
+Jasmine JavaScript BDD framework under <tt>env.js</tt>. It includes
 support for running via autotest using the <tt>autojaz</tt>
 command.
+
+== Install
+
+You can install the gem via <tt>gem install smparkes-jazrb</tt>. If
+you want install from github (http://github.com/smparkes/jazrb),
+you'll need to checkout the Jasmine submodule (<tt>git submodule update --init</tt>) and also need to make sure you have the prerequisites listed in the gemspec in the Rakefile.
 
 == Use
 
 From the root of a project, i.e., the parent of the <tt>spec</tt>
 directory, you can use the <tt>jazrb</tt> command as you would the
-rspec <tt>spec</tt> comand, e.g.,
+rspec <tt>spec</tt> command, e.g.,
 
      jazrb spec/foo_spec.js spec/bar_spec.js
 
-You can also execute an html spec via jazrb:
+You can also execute an HTML spec via jazrb:
 
      jazrb spec/foo_spec.html
 
-The html fixture must load the necessary test files. Currently, only one fixture can be run per <tt>jazrb</tt> command.
+The HTML fixture must load the necessary test files. Currently, only one fixture can be run per <tt>jazrb</tt> command.
 
 To run all the tests in the <tt>spec</tt> directory repeatedly, use <tt>autojaz</tt> as
 you would use <tt>autospec</tt>:
@@ -26,7 +32,7 @@ you would use <tt>autospec</tt>:
 
 You'll need to install the ZenTest gem if you don't have it
 installed; <tt>jazrb</tt> can be used without ZenTest installed, but <tt>autojaz</tt>
-cannot be. autojaz does not (and currently cannot) load html fixtures.
+cannot be. autojaz does not (and currently cannot) load HTML fixtures.
 
 Screen shot at http://www.scrnshots.com/users/smparkes/screenshots/206033
 
