--- a/README.rdoc
+++ b/README.rdoc
@@ -6,16 +6,19 @@ running via watchr and autotest.
 
 == Install
 
-You can install the gem via <tt>gem install smparkes-jazrb</tt>. If
-you want install from github (http://github.com/smparkes/jazrb),
+You can install the gem via <tt>gem install smparkes-jazrb</tt>.  If
+you want to install from github (http://github.com/smparkes/jazrb),
 you'll need to checkout the Jasmine submodule (<tt>git submodule
 update --init</tt>) and also need to make sure you have the
 prerequisites listed in the gemspec in the Rakefile. <tt>rake
-gemspec</tt> will build and copy the necessary parts of Jasmine.
+gemspec</tt> will then build and copy the necessary parts of Jasmine.
 
 If you want to run the examples/tests, you'll need jQuery. The <tt>git
-submould update --init</tt> command will have brought in jQuery, but
+submodule update --init</tt> command will have brought in jQuery, but
 you'll need to build it: <tt>cd vendor/jquery && make</tt>.
+
+Even if you install the gem, you may want to get the github files to
+see and run the examples.
 
 == Use
 
@@ -38,35 +41,47 @@ The HTML fixture must load the necessary test files. Any number of
 fixtures can be passed to the <tt>jazrb</tt> command.
 
 jazrb uses env.js to run the tests, feeding it your HTML and
-Javascript, plus the necessary JavaScript and pages to make the tests
+JavaScript, plus the necessary JavaScript and controls to make the tests
 run correctly. You can see the entire <tt>envjsrb</tt> command by
 passing <tt>jazrb</tt> the <tt>-v</tt> flag.
 
 The Jasmine tests are configured to report results in streaming XML
 (JUnit format, more or less), which <tt>jazrb</tt> turns into the
-familar rspec-like results. The <tt>jazrb</tt> <tt>--xml</tt> flag
+familiar rspec format. The <tt>--xml</tt> flag
 causes <tt>jazrb</tt> to display the raw XML output.
 
 To run all the tests in the <tt>spec</tt> directory repeatedly you can
-use <tt>watchr</tt>. See the <tt>jazrb.watchr</tt> file and the
-discussion on exmaples below.
+use watchr:
 
-You can alos try using <tt>autojaz</tt> as
+  rake test
+
+or
+
+  watchr jazrb.watchr
+
+or even
+
+  ./jazrb.watchr
+
+See jazrb's own <tt>jazrb.watchr</tt> file and the
+discussion on examples below.
+
+You can also try using <tt>autojaz</tt> as
 you would use <tt>autospec</tt>:
 
    autojaz
 
 You'll need to install the ZenTest gem if you don't have it installed;
 <tt>jazrb</tt> can be used without ZenTest installed, but
-<tt>autojaz</tt> cannot be. autojaz is probably going to be
-deprecated.
+<tt>autojaz</tt> cannot be. Note that <tt>autojaz</tt> may be
+deprecated in favor of <tt>watchr</tt>.
 
 Screen shot at http://www.scrnshots.com/users/smparkes/screenshots/206033
 
 == Examples
 
-There are examples in examples/* and spec/examples. You can run the
-tests with "rake test" which will run the watchr control file,
+There are examples in <tt>examples/*</tt> and <tt>spec/examples/*</t>. You can run the
+tests with <tt>rake test</tt> which will run the watchr control file,
 <tt>jazrb.watchr</tt>. (Watchr as a runner will probably replace
 autojaz.)  You'll need the smparkes-watchr gem.
 
